--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="about-text">
           <p>Desarrollador Junior en Aplicaciones WEB - Estudiante de Ingenieria de Computacion en la Universidad José Antonio Paez de Venezuela</p>
           <p>Trabajador y Cumplidor, Honesto con el grupo de trabajo y siempre dispuesto a aprender, Recomendado por compañeros de trabajos, clientes y jefes.</p>
-          <p class="text-center"><a class="btn btn-primary" href="#"><i class="fa fa-download"></i> Descargar CV</a></p>
+          <!-- <p class="text-center"><a class="btn btn-primary" href="#"><i class="fa fa-download"></i> Descargar CV</a></p> -->
         </div>
       </div>
     </div>
